deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  namespace: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-app
        image: ghcr.io/marcelhimmelreichcm/cluster-vue-app/vue-app:737949ef26e8f2a948d0cf0f4d1e26021275abf0-8
        ports:
        - containerPort: 80
