service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app
  namespace: vue-namespace
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: vue-app
