ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vue-app.test-cluster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-app
            port:
              number: 80
